Add more semantic elements to index.html

--- a/news.html
+++ b/news.html
@@ -16,8 +16,56 @@
 	<main>
 
 		<section>
+
+			<article>
+
+				<header>
+					<h2>Topic #1</h2>
+				</header>
+
+				<section>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, voluptates dolores, dolorem cum saepe magni quas doloribus nostrum illo, tempore amet maiores veniam, hic sunt pariatur porro fuga possimus temporibus.</p>
+				</section>
+
+				<footer>
+					<p><time>2015-06-07</time> Ivan Ivanov</p>
+				</footer>
+
+			</article>
+
+			<article>
+
+				<header>
+					<h2>Topic #1</h2>
+				</header>
+
+				<section>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, voluptates dolores, dolorem cum saepe magni quas doloribus nostrum illo, tempore amet maiores veniam, hic sunt pariatur porro fuga possimus temporibus.</p>
+				</section>
+
+				<footer>
+					<p><time>2015-06-07</time> Ivan Ivanov</p>
+				</footer>
+
+			</article>
 			
 		</section>
+
+		<aside>
+
+			<nav>
+			<header>
+				<h3>Interesting news:<h3>
+			</header>
+			<ul>
+				<li>News about something</li>
+				<li>News about something else</li>
+				<li>Some other news</li>
+			</ul>
+		</nav>
+
+		</aside>
+		
 
 	</main>
 
