Add news.css with some styles

--- a/news.html
+++ b/news.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>CodeBrazzersShop News</title>
+	<link rel="stylesheet" href="css/news.css">
 </head>
 <body>
 	<header>
-		
+		<h1>News</h1>
 	</header>
 
 	<nav>
@@ -24,7 +25,7 @@
 				</header>
 
 				<section>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, voluptates dolores, dolorem cum saepe magni quas doloribus nostrum illo, tempore amet maiores veniam, hic sunt pariatur porro fuga possimus temporibus.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, voluptates dolores, dolorem cum saepe magni quas doloribus nostrum illo, tempore amet maiores veniam, hic sunt pariatur porro fuga possimus temporibus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam voluptatum error optio. Vero molestias, totam consequuntur quos ad ipsa sapiente repudiandae sequi dolorum animi libero vel ullam accusantium explicabo voluptate!</p>
 				</section>
 
 				<footer>
@@ -36,11 +37,11 @@
 			<article>
 
 				<header>
-					<h2>Topic #1</h2>
+					<h2>Topic #2</h2>
 				</header>
 
 				<section>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, voluptates dolores, dolorem cum saepe magni quas doloribus nostrum illo, tempore amet maiores veniam, hic sunt pariatur porro fuga possimus temporibus.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, voluptates dolores, dolorem cum saepe magni quas doloribus nostrum illo, tempore amet maiores veniam, hic sunt pariatur porro fuga possimus temporibus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto, incidunt. Maxime quidem nisi fugit maiores mollitia voluptatibus, blanditiis quaerat aliquam labore. Nostrum illum soluta iure culpa quaerat qui eaque?</p>
 				</section>
 
 				<footer>
