Use EPAM BrandBook colors to style page

--- a/news.html
+++ b/news.html
@@ -59,9 +59,9 @@
 				<h3>Interesting news:<h3>
 			</header>
 			<ul>
-				<li>News about something</li>
-				<li>News about something else</li>
-				<li>Some other news</li>
+				<li><a href="">News about something</a></li>
+				<li><a href="">News about something else</a></li>
+				<li><a href="">Some other news</a></li>
 			</ul>
 		</nav>
 
