--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>CodeBrazzersShop News</title>
-	<link rel="stylesheet" href="css/news.css">
+	<link rel="stylesheet" href="css/all.css">
 </head>
 <body>
 	<header>
