added requirejs (also added exampleModule for test and demo purposes)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>CodeBrazzersShop</title>
 	<link rel="stylesheet" href="css/all.css">
+	<script data-main="js/main" src="js/require.js"></script>
 </head>
 <body>
 	
