Change news.html =(

--- a/news.html
+++ b/news.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>CodeBrazzersShop News</title>
 	<link rel="stylesheet" href="css/all.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
 	<header>
@@ -18,7 +19,7 @@
 
 		<section>
 
-			<article>
+			<article class='news-article'>
 
 				<header>
 					<h2>Topic #1</h2>
@@ -29,45 +30,52 @@
 				</section>
 
 				<footer>
-					<p><time>2015-06-07</time> Ivan Ivanov</p>
+						<i class="fa fa-calendar-plus-o"></i>
+						<time>2015-06-07</time>
+						<i class="fa fa-user"></i>
+						<span><a href="">Ivan Ivanov</a></span>
+						<i class="fa fa-comments"></i>
+						<span> 3 </span>
+						<i class="fa fa-tags"></i>
+						<ul>
+							<li><a href="">Apple</a></li>
+							<li><a href="">iPhone</a></li>
+						</ul>
+						<br>
+						<a href="#" class='news-article-read-more'>Read more...</a>
+
 				</footer>
 
 			</article>
 
-			<article>
 
-				<header>
-					<h2>Topic #2</h2>
-				</header>
-
-				<section>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, voluptates dolores, dolorem cum saepe magni quas doloribus nostrum illo, tempore amet maiores veniam, hic sunt pariatur porro fuga possimus temporibus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto, incidunt. Maxime quidem nisi fugit maiores mollitia voluptatibus, blanditiis quaerat aliquam labore. Nostrum illum soluta iure culpa quaerat qui eaque?</p>
-				</section>
-
-				<footer>
-					<p><time>2015-06-07</time> Ivan Ivanov</p>
-				</footer>
-
-			</article>
 			
 		</section>
 
 		<aside>
 
 			<nav>
-			<header>
-				<h3>Interesting news:<h3>
-			</header>
-			<ul>
-				<li><a href="">News about something</a></li>
-				<li><a href="">News about something else</a></li>
-				<li><a href="">Some other news</a></li>
-			</ul>
-		</nav>
+				<header>
+					<h3>Interesting news:<h3>
+				</header>
+				<ul>
+					<li><a href="">News about something</a></li>
+					<li><a href="">News about something else</a></li>
+					<li><a href="">Some other news</a></li>
+				</ul>
+			</nav>
+
+			<section id='news-tags'>
+
+				<header>
+					<h3>Tags:<h3>
+				</header>
+				<section>
+					
+			</section>
 
 		</aside>
 		
-
 	</main>
 
 	<footer>
