Make articles show as a net

--- a/news.html
+++ b/news.html
@@ -48,7 +48,92 @@
 
 			</article>
 
+			<article class='news-article'>
 
+				<header>
+					<h2>Topic #1</h2>
+				</header>
+
+				<section>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, voluptates dolores, dolorem cum saepe magni quas doloribus nostrum illo, tempore amet maiores veniam, hic sunt pariatur porro fuga possimus temporibus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam voluptatum error optio. Vero molestias, totam consequuntur quos ad ipsa sapiente repudiandae sequi dolorum animi libero vel ullam accusantium explicabo voluptate!</p>
+				</section>
+
+				<footer>
+						<i class="fa fa-calendar-plus-o"></i>
+						<time>2015-06-07</time>
+						<i class="fa fa-user"></i>
+						<span><a href="">Ivan Ivanov</a></span>
+						<i class="fa fa-comments"></i>
+						<span> 3 </span>
+						<i class="fa fa-tags"></i>
+						<ul>
+							<li><a href="">Apple</a></li>
+							<li><a href="">iPhone</a></li>
+						</ul>
+						<br>
+						<a href="#" class='news-article-read-more'>Read more...</a>
+
+				</footer>
+
+			</article>
+
+			<article class='news-article'>
+
+				<header>
+					<h2>Topic #1</h2>
+				</header>
+
+				<section>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, voluptates dolores, dolorem cum saepe magni quas doloribus nostrum illo, tempore amet maiores veniam, hic sunt pariatur porro fuga possimus temporibus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam voluptatum error optio. Vero molestias, totam consequuntur quos ad ipsa sapiente repudiandae sequi dolorum animi libero vel ullam accusantium explicabo voluptate!</p>
+				</section>
+
+				<footer>
+						<i class="fa fa-calendar-plus-o"></i>
+						<time>2015-06-07</time>
+						<i class="fa fa-user"></i>
+						<span><a href="">Ivan Ivanov</a></span>
+						<i class="fa fa-comments"></i>
+						<span> 3 </span>
+						<i class="fa fa-tags"></i>
+						<ul>
+							<li><a href="">Apple</a></li>
+							<li><a href="">iPhone</a></li>
+						</ul>
+						<br>
+						<a href="#" class='news-article-read-more'>Read more...</a>
+
+				</footer>
+
+			</article>
+
+			<article class='news-article'>
+
+				<header>
+					<h2>Topic #1</h2>
+				</header>
+
+				<section>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, voluptates dolores, dolorem cum saepe magni quas doloribus nostrum illo, tempore amet maiores veniam, hic sunt pariatur porro fuga possimus temporibus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam voluptatum error optio. Vero molestias, totam consequuntur quos ad ipsa sapiente repudiandae sequi dolorum animi libero vel ullam accusantium explicabo voluptate!</p>
+				</section>
+
+				<footer>
+						<i class="fa fa-calendar-plus-o"></i>
+						<time>2015-06-07</time>
+						<i class="fa fa-user"></i>
+						<span><a href="">Ivan Ivanov</a></span>
+						<i class="fa fa-comments"></i>
+						<span> 3 </span>
+						<i class="fa fa-tags"></i>
+						<ul>
+							<li><a href="">Apple</a></li>
+							<li><a href="">iPhone</a></li>
+						</ul>
+						<br>
+						<a href="#" class='news-article-read-more'>Read more...</a>
+
+				</footer>
+
+			</article>
 			
 		</section>
 
