added structure of future module ( first steps :) )

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<li><a href="#">support</a></li>
 			</ul>
 			<ul class='search-cart-login-holder'>
-				<li class='search'><a href="#"></a></li>
+				<li class='search'><a href="#" id="searchButton"><i class="fa fa-search fa-3x"></i></a></li>
 				<li class='cart'><a href="#"></a></li>
 				<li class='login'><a href="#"></a></li>
 			</ul>
