Add header to news.html

--- a/news.html
+++ b/news.html
@@ -1,35 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>CodeBrazzersShop News</title>
+	<meta charset="utf-8">
+	<title>CodeBrazzersShop</title>
 	<link rel="stylesheet" href="css/all.css">
-	<link rel="stylesheet" href="css/all.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<script data-main="js/main" src="js/require.js"></script>
 </head>
 <body>
-	<header>
-		<h1>News</h1>
+	<header id='header'>
+		<div class='wide-wrapper'>
+			<strong id='logo'><a href="#"></a></strong>
+			<ul id='nav'>
+				<li>
+					<a href="#">products</a>
+					<ul>
+						<li><a href="#">Apple</a></li>
+						<li><a href="#">Nokia</a></li>
+						<li><a href="#">Lenovo</a></li>
+						<li><a href="#">Xiaomi</a></li>
+						<li><a href="#">LG</a></li>
+					</ul>
+				</li>
+				<li><a href="#">news</a></li>
+				<li><a href="#">contacts</a></li>
+				<li><a href="#">support</a></li>
+			</ul>
+			<ul class='search-cart-login-holder'>
+				<li class='search'><a href="#"></a></li>
+				<li class='cart'><a href="#"></a></li>
+				<li class='login'><a href="#"></a></li>
+			</ul>
+		</div>
 	</header>
-
-	<nav>
-		
-	</nav>
-
 	<main>
-
 		<section>
-
 			<article class='news-article'>
-
 				<header>
 					<h2>Topic #1</h2>
 				</header>
-
 				<section>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, voluptates dolores, dolorem cum saepe magni quas doloribus nostrum illo, tempore amet maiores veniam, hic sunt pariatur porro fuga possimus temporibus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam voluptatum error optio. Vero molestias, totam consequuntur quos ad ipsa sapiente repudiandae sequi dolorum animi libero vel ullam accusantium explicabo voluptate!</p>
 				</section>
-
 				<footer>
 						<i class="fa fa-calendar-plus-o"></i>
 						<time>2015-06-07</time>
@@ -44,21 +55,15 @@
 						</ul>
 						<br>
 						<a href="#" class='news-article-read-more'>Read more...</a>
-
 				</footer>
-
 			</article>
-
 			<article class='news-article'>
-
 				<header>
 					<h2>Topic #1</h2>
 				</header>
-
 				<section>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, voluptates dolores, dolorem cum saepe magni quas doloribus nostrum illo, tempore amet maiores veniam, hic sunt pariatur porro fuga possimus temporibus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam voluptatum error optio. Vero molestias, totam consequuntur quos ad ipsa sapiente repudiandae sequi dolorum animi libero vel ullam accusantium explicabo voluptate!</p>
 				</section>
-
 				<footer>
 						<i class="fa fa-calendar-plus-o"></i>
 						<time>2015-06-07</time>
@@ -73,21 +78,15 @@
 						</ul>
 						<br>
 						<a href="#" class='news-article-read-more'>Read more...</a>
-
 				</footer>
-
 			</article>
-
 			<article class='news-article'>
-
 				<header>
 					<h2>Topic #1</h2>
 				</header>
-
 				<section>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, voluptates dolores, dolorem cum saepe magni quas doloribus nostrum illo, tempore amet maiores veniam, hic sunt pariatur porro fuga possimus temporibus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam voluptatum error optio. Vero molestias, totam consequuntur quos ad ipsa sapiente repudiandae sequi dolorum animi libero vel ullam accusantium explicabo voluptate!</p>
 				</section>
-
 				<footer>
 						<i class="fa fa-calendar-plus-o"></i>
 						<time>2015-06-07</time>
@@ -102,21 +101,15 @@
 						</ul>
 						<br>
 						<a href="#" class='news-article-read-more'>Read more...</a>
-
 				</footer>
-
 			</article>
-
 			<article class='news-article'>
-
 				<header>
 					<h2>Topic #1</h2>
 				</header>
-
 				<section>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, voluptates dolores, dolorem cum saepe magni quas doloribus nostrum illo, tempore amet maiores veniam, hic sunt pariatur porro fuga possimus temporibus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam voluptatum error optio. Vero molestias, totam consequuntur quos ad ipsa sapiente repudiandae sequi dolorum animi libero vel ullam accusantium explicabo voluptate!</p>
 				</section>
-
 				<footer>
 						<i class="fa fa-calendar-plus-o"></i>
 						<time>2015-06-07</time>
@@ -131,15 +124,10 @@
 						</ul>
 						<br>
 						<a href="#" class='news-article-read-more'>Read more...</a>
-
 				</footer>
-
 			</article>
-			
 		</section>
-
 		<aside>
-
 			<nav>
 				<header>
 					<h3>Interesting news:<h3>
@@ -150,22 +138,14 @@
 					<li><a href="">Some other news</a></li>
 				</ul>
 			</nav>
-
 			<section id='news-tags'>
-
 				<header>
 					<h3>Tags:<h3>
 				</header>
-				<section>
-					
 			</section>
-
 		</aside>
-		
 	</main>
-
-	<footer>
-		
+	<footer>	
 	</footer>	
 </body>
 </html>
