--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 				<li><a href="#">support</a></li>
 			</ul>
 			<ul class='search-cart-login-holder'>
-				<li class='search'><a href="#" id="searchButton"><i class="fa fa-search fa-3x"></i></a></li>
-				<li class='cart'><a href="#"></a></li>
-				<li class='login'><a href="#"></a></li>
+				<input id="searchField" placeholder="Search...">
+				<li class='search'><a href="#" id="searchButton"><i class="fa fa-search"></i></a></li>
+				<li class='cart'><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+				<li class='login'><a href="#"><i class="fa fa-sign-in"></i></a></li>
 			</ul>
 		</div>
 	</header>
