--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 				<li><a href="#">support</a></li>
 			</ul>
 			<ul class='search-cart-login-holder'>
-				<input id="searchField" placeholder="Search...">
-				<li class='search'><a href="#" id="searchButton"><i class="fa fa-search"></i></a></li>
+				<input id="searchField" class="search-field" placeholder="Search...">
+				<li class='search'><a href="#" id="searchButton" ><i class="fa fa-search"></i></a></li>
 				<li class='cart'><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
 				<li class='login'><a href="#"><i class="fa fa-sign-in"></i></a></li>
 			</ul>
